# DungeonCrawler

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE
.github/workflows/: cmake-multi-platform.yml  code_quality.yml
assets/models/characters/: mage.m3d
cmake/: CMakeLists.txt  FindImgui.cmake  FindImgui.txt
libs/include/rlImGui/: rlImGui.h
libs/rlImGui/: CMakeLists.txt
src/: main.cpp
src/components/: C_Model.h  C_Position.h  Model.h  Position.h  Size.h  StaticModel.h
src/core/: Game.cpp  Game.h  Logger.cpp  Logger.h  Scene.cpp  Scene.h  globals.h  rlights.h
src/core/resources/: StaticModelCache.h  StaticModelLoader.cpp  StaticModelLoader.h
src/systems/: DungeonSystem.cpp  DungeonSystem.h  ModelSystem.cpp  RenderSystem.cpp  RenderSystem.h
